# Backtrader

./: .gitignore  TODO.txt  backtrader.db  pyproject.toml
backend/: __init__.py  database.py  main.py
backend/models/: __init__.py  api_models.py
backend/services/: __init__.py  backtest_service.py  market_data_service.py  order_service.py  portfolio_service.py
backend/websocket/: __init__.py  connection_manager.py
data/cache/: AAPL_1d.pkl  GOOG_1d.pkl  SPY_1d.pkl
frontend/: .env.local.example  .eslintrc.cjs  .prettierrc  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/.next/: build-manifest.json  trace
frontend/hooks/: useBacktests.ts  useCustomStrategies.ts  useMarketData.ts  useOrders.ts  usePortfolio.ts  useStrategies.ts
frontend/lib/: config.ts  customStrategies.ts  http.ts  swr.ts
frontend/pages/: 404.tsx  500.tsx  _app.tsx  _document.tsx  backtests.tsx  index.tsx  strategies.tsx
frontend/styles/: globals.css
frontend/types/: api.ts  strategySchema.ts
output/: backtrader_equity_aapl_2022.csv
src/: __init__.py  async_engine.py  config.py  data_manager.py  engine.py  optimizer.py  order_manager.py  performance.py  plotting.py  sizing_manager.py  strategy_manager.py
src/config/: default.yaml
src/examples/: basic_backtest.py  custom_strategy.py  (+1 more)
tests/: cross_validate_backtrader.py  test_analysis.py  test_composition.py  test_comprehensive.py  test_engine.py  test_execution.py  test_multi_asset.py  test_plotting.py  test_realism.py  test_sizing.py  test_strategies.py  test_system.py
(+133 files in other folders)
